--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
